Update getting all tasks logic